commiting the file

--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,8 @@
     <p>@ 2024 Nastra.com</p>
   </div>
 
+  <script src="collection.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
